# event-creation-chatbot

./: .env.example  .gitignore  CLAUDE.md  CONTEXT.md  Dockerfile  README.md  Senior Python Coding Test.md  docker-compose.yml  pyproject.toml  skills-lock.json
.claude/: skills
app/: config.py  main.py
app/agent/: engine.py  prompts.py  responses.py  state.py  tools.py
app/api/: chat.py  events.py  session.py
app/models/: event.py  filters.py
app/services/: db.py  memory.py  repository.py
docs/: sample-conversations.md
docs/agents/: domain.md  triage-labels.md
evals/: README.md  conftest.py  test_agent_routing.py
migrations/: 001_create_events.sql  002_ticket_limit_within_capacity.sql
static/: app.js  index.html  styles.css
tests/: conftest.py  test_api.py  test_draft.py  test_engine.py  test_memory.py  test_repository.py  test_tools.py
web/: .dockerignore  Dockerfile  package.json  pnpm-lock.yaml
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/api/chat/: route.ts
web/src/app/api/events/: route.ts
web/src/app/api/sessions/: route.ts
web/src/app/api/state/[sessionId]/: route.ts
web/src/components/: Chat.tsx  DraftPanel.tsx  EventsPanel.tsx  HistoryDrawer.tsx  TypingIndicator.tsx
web/src/lib/: fields.ts  session.ts  types.ts
