[project]
name = "event-creation-chatbot"
version = "0.1.0"
description = "AI-assisted event creation chatbot (FastAPI + LangGraph + PostgreSQL + ChromaDB)"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "sqlalchemy>=2.0",
    "greenlet>=3.0",
    "psycopg[binary]>=3.2",
    "asyncpg>=0.29",
    "aiosqlite>=0.20",
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "langgraph>=0.2.45",
    "langgraph-checkpoint-postgres>=2.0",
    "openai>=1.54",
    "chromadb>=0.5.18",
    "onnxruntime>=1.17,<1.23",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "eval: agent behaviour eval — hits a real LLM, slow + stochastic. Run with `pytest evals/`.",
]
filterwarnings = [
    # Emitted once at langgraph import; we don't construct the serializer.
    "ignore::langchain_core._api.deprecation.LangChainPendingDeprecationWarning:langgraph.checkpoint.serde.encrypted",
]
